--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <div class="carousel-item active">
       <img src="assets/images/ad1.jpg" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item active">
       <img src="assets/images/ad2.jpg" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item active">
       <img src="assets/images/ad3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
